<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/common_padding_default"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackground">

    <ImageView

        android:id="@+id/imgNews"
        android:layout_width="@dimen/card_image_size"
        android:layout_height="@dimen/card_image_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/common_margin_min"
        android:contentDescription="@string/description_new_photo"/>

    <TextView

        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/title_new"
        app:layout_constraintStart_toEndOf="@+id/imgNews"
        app:layout_constraintEnd_toStartOf="@+id/tvDate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/common_padding_default" />

    <TextView

        android:id="@+id/tvSummary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/summary_new"
        app:layout_constraintStart_toEndOf="@+id/imgNews"
        app:layout_constraintEnd_toStartOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/common_padding_default" />

    <TextView

        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/date_new"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>